[gd_scene load_steps=5 format=3 uid="uid://d07jabc63stmh"]

[ext_resource type="Script" path="res://scenes/ui/weapon_upgrades/weapon_upgrade_card.gd" id="1_4c2uk"]
[ext_resource type="AudioStream" uid="uid://2uc2qm8evo3d" path="res://assets/audio/sfx/weapon_upgrade_select.wav" id="2_1hewj"]
[ext_resource type="PackedScene" uid="uid://ctvfewktbvewa" path="res://scenes/components/card_animator_component.tscn" id="2_ciyxs"]
[ext_resource type="AudioStream" uid="uid://clyc7x6n6y3ms" path="res://assets/audio/sfx/card_hover.wav" id="4_jrogl"]

[node name="WeaponUpgradeCard" type="PanelContainer" groups=["weapon_upgrade_card"]]
custom_minimum_size = Vector2(150, 200)
offset_right = 150.0
offset_bottom = 150.0
pivot_offset = Vector2(75, 100)
mouse_default_cursor_shape = 2
theme_type_variation = &"WUStatPanelContainer"
script = ExtResource("1_4c2uk")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1hewj")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jrogl")

[node name="CardAnimatorComponent" parent="." node_paths=PackedStringArray("card") instance=ExtResource("2_ciyxs")]
card = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitlePanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"WUTitleStatPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TitlePanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitlePanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"OutlinedLabel"
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 10
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Some description"
autowrap_mode = 3

[node name="HintLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.894118, 0.360784, 0.372549, 1)
theme_override_font_sizes/normal_font_size = 5
bbcode_enabled = true
text = "[shake]Hint text[/shake]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "0/5"
